--- a/src/htdocs/modules/admin/_ProductActionsView.scss
+++ b/src/htdocs/modules/admin/_ProductActionsView.scss
@@ -5,10 +5,10 @@
   > button {
     text-align: center;
     font-size: 11px;
-    height: 5em;
-    line-height: 2em;
+    height: 45px;
+    line-height: 18px;
     color: #777;
-    padding-top: 6px;
+    padding-top: 2px;
     width: 60px;
 
     &:before {
@@ -37,9 +37,9 @@
 
   @media screen and (max-width: 767px) {
     > button {
-      font-size: .8125em;
-      line-height: 3rem;
-      height: 3rem;
+      font-size: 10px;
+      width: 25%;
+      left: 1px;
     }
   }
 }
